# internship-entry-task-2

./: .dockerignore  AGENTS.md  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
docs/agents/: issue-tracker.md
migrations/: env.py
migrations/versions/: 0001_bootstrap.py  0002_operations_and_events.py  0003_dispatch_intents.py  0004_dispatch_retry_metadata.py
specs/: ARCH-payment-service.md  DESIGN-async-python-postgresql.md  DESIGN-durable-dispatch-intent.md  REQ-service-foundation.md  SPEC-compose-reviewer-scenario.md  SPEC-durable-dispatch.md  SPEC-operation-records.md  SPEC-payment-observability.md  SPEC-readiness.md
src/payment_service/: config.py  database.py  dispatcher.py  main.py  metrics.py  models.py  observability.py  operations.py  provider.py  receipts.py  schemas.py
tests/: test_compose.py  test_config.py  test_dispatcher.py  test_health.py  test_observability_unit.py
tests/compose/: conftest.py  test_real_provider.py
tests/integration/: conftest.py  test_concurrent_submission.py  test_dispatch.py  test_dispatch_recovery.py  test_health_postgres.py  test_observability.py  test_operations.py  test_receipts.py
