[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payment-service"
version = "0.1.0"
description = "Resilient payment operation service"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/payment_service"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires an external service such as PostgreSQL"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
